# Template

./: .env.example  .gitignore  .pnpmrc  .pre-commit-config.yaml  .tflint.hcl  Contributing.md  LICENSE  README.md  Variable.md  copy-logo.ps1  docker-compose.yml  jest.config.js  kong-production.yaml  kong-staging.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-next.js  test-svelte-only.ps1  tsconfig.json  turbo.json  workspace-config.js  workspace-debug.json
.VSCodeCounter/2025-07-17_22-57-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.auth0/: config-prod.json  config.json  tenant-prod.yaml  tenant.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-electron.yml  deploy-expo-mobile.yml  deploy-tauri-desktop.yml  deploy-tauri-mobile.yml  deploy-web.yml  deply-svelte-web.yml  terraform.yml  test-sync-adapters.yml
.github/workflows/api/: api-R.yml  api-cpp.yml  api-dotnet.yml  api-go.yml  (+9 more)
.turbo/daemon/: b2242a002295aeed-turbo.log.2025-06-22  b2242a002295aeed-turbo.log.2025-06-23  b2242a002295aeed-turbo.log.2025-07-19  b2242a002295aeed-turbo.log.2025-07-21  f014357480fcdb5c-turbo.log.2025-04-21  f014357480fcdb5c-turbo.log.2025-05-27  f014357480fcdb5c-turbo.log.2025-06-07
apps/desktop/: IMPLEMENTATION_SUMMARY.md  WEBTRANSPORT.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/electron/: .gitignore  forge.config.ts  package.json  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
apps/expo/: App.tsx  app.json  babel.config.js  expo-fix.sh  metro.config.js  package.json  package.json.backup  start-tunnel.sh  tsconfig.json  types.d.ts
apps/next/: middleware.ts  next-sitemap.config.js  next.config.js  package.json  tsconfig.json
apps/taurte/tauriMobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/taurte/tauriMobile/src-tauri/src/: main.rs
assets/images/: README.md
concept/: README.md
concept/architecture/: system-design.md
concept/backend/: api-endpoints.md  database-schema.md
concept/components/: footer.md  header.md  hero.md  navigation.md
concept/deployment/: ci-cd.md
concept/pages/: dashboard.md  home.md  login.md
database/: README.md  setup.bat  setup.sh
database/config/: database.config.ts
database/migrations/: 001_initial_schema.sql
database/seeds/: seed_mock_data.sql
docs/Audio/: Tone.md
docs/Authentication/: AccountCenter.md  AccountRecovery.md  CRA.md  CRARust.md  account-center.json
docs/CI-CD/: CI_CD_Guide.md  GitHubSecretsSetup.md
docs/CodeRabbit/: CodeRabbitChecklist.md
docs/Crypto/: Crypto.md
docs/Dashboard/: Implementation_Summary.md  MockData.md
docs/Deployment/: DesktopAppDeployment.md  GooglePlayDeployment.md  Summary.md  VercelDeployment.md
docs/Ditto/: DittoIntegration.md
docs/EmailMarketing/: Brevo.md
docs/Expo/: DUNS-Number.md  ExpoMac.md  expo-emulator-setup-windows.md
docs/Moderation/: DueProcess.md  MachineLearning.md  ReinforcementLearning.md
docs/Neuralink/: BrainComputerInterface.md
docs/Notifications/: PushNotifications.md
docs/OperatingSystem/: Redox.md
docs/Packaging/: Packaging.md
docs/Ports/: Ports.md
docs/PostHog/: PostHog.md
docs/Postman/: PostmanChecklist.md
docs/Prisma/: IgnorePrismaErrors.md  Mock.md  Prisma.md
docs/ProgrammingLanguages/: C#.md  C++.md  C.md  Elixir.md  Go.md  JavaScala.md  Julia.md  Lua.md  Nim.md  PHP.md  Python.md  R.md  Rust.md  TypeScript.md
docs/Revenue/: Crypto.md  Polar.md  PostHog.md  Qonversion.md  Stripe.md  Subscriptions.md
docs/StateManagement/: ZustandGuide.md
docs/Tailwind + Shadcn/: TailwindShadcnUI.md
docs/Tauri/: Desktop.md  Mobile.md
docs/Temporal/: ImplementationGuide.md  TemporalChecklist.md
docs/Testing/: JestSetup.md  Start.md
docs/Theming/: ThemingGuide.md
microservices/ai-advisor/: Concept.md
microservices/api/: API.md
microservices/api/api-cpp/: .env.example  C++API.md  CMakeLists.txt  Dockerfile  config.json  dev-run.ps1  dev-run.sh  package.json
microservices/api/api-cpp/src/: main.cpp
microservices/api/api-haskell/: .env.example  README.md  nexpo-api.cabal
microservices/api/api-haskell/src/: Main.hs
microservices/api/api-haskell/src/Lib/: Auth.hs  Config.hs  Handlers.hs  Server.hs  Types.hs
microservices/api/api-rust/: .env.example  Cargo.toml  Dockerfile  RustAPI.md
microservices/api/api-rust/src/: main.rs
microservices/data-sync/: Concept.md
microservices/email-verification/: package.json
microservices/kpi-engine/: Concept.md
microservices/notification/: Concept.md
microservices/payments/: Concept.md
microservices/user/: Concept.md
mindsdb-main/: .env.example  .gitignore  MANIFEST.in  Makefile  MindsDBSetup.md  docker-compose.yml  init_mindsdb.py  install_mindsdb.ps1  install_mindsdb.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
mindsdb-main/config/: config.json
mindsdb-main/integrations/: __init__.py  cloud_connector.py  stubs.py
mindsdb-main/scripts/: setup_mindsdb_integration.js  start-mindsdb.js  validate-secrets.ps1  validate-secrets.sh
mindsdb-main/tests/: conftest.py  test_cloud_connector.py  test_init_mindsdb.py
scripts/: build-enabled-platforms.js  check-dev-flags.js  dev-backends.js  dev-enabled-platforms.js  kill-dev-ports.ps1  platform-setup.js  start-mindsdb-wrapper.ps1  start-mindsdb.js  test-svelte-start.js
supabase/: config.toml  seed.sql
supabase/docs/: SupabaseProduction.md  SupabaseQuickstart.md
supabase/migrations/: 20240101000001_create_profiles.sql  20250422164346_users.sql
terraform/: MultiCloudTerraform.md  QuickStart.md  TerraformInfrastructure.md  main.tf  run_terraform.ps1  run_terraform.sh  terraform.tfvars.example  variables.tf
terraform/microservices/: Overview.md  PostHogDeploymentGuide.md
(+663 files in other folders)
