cabal-version: 2.2

name:           nexpo-api
version:        1.0.0
description:    Basic configurable backend API for Nexpo - Haskell Implementation
homepage:       https://github.com/nexpo/backend
license:        MIT
author:         Nexpo Team
maintainer:     team@nexpo.dev
copyright:      2025 Nexpo Team
category:       Web
build-type:     Simple

executable nexpo-api
  main-is:             Main.hs
  other-modules:       
      Lib.Server
      Lib.Types
      Lib.Config
      Lib.Auth
      Lib.Handlers
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       
      base >=4.7 && <5
    , aeson
    , aeson-pretty
    , bytestring
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , wai
    , wai-cors
    , wai-extra
    , warp
    , http-client
    , http-client-tls
    , http-types
    , text
    , time
    , containers
    , mtl
    , transformers
    , jose
    , x509-store
    , cryptonite
    , memory
    , base64-bytestring
    , swagger2
    , lens
    , network-uri
    , case-insensitive
    , unordered-containers
    , vector
  default-language:    Haskell2010

library
  exposed-modules:     
      Lib.Server
      Lib.Types  
      Lib.Config
      Lib.Auth
      Lib.Handlers
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       
      base >=4.7 && <5
    , aeson
    , aeson-pretty
    , bytestring
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , wai
    , wai-cors
    , wai-extra
    , warp
    , http-client
    , http-client-tls
    , http-types
    , text
    , time
    , containers
    , mtl
    , transformers
    , jose
    , x509-store
    , cryptonite
    , memory
    , base64-bytestring
    , swagger2
    , lens
    , network-uri
    , case-insensitive
    , unordered-containers
    , vector
  default-language:    Haskell2010
