[package]
name = "nexpo-api-rust"
version = "1.0.0"
edition = "2021"
authors = ["Nexpo Team"]
description = "Production-ready Actix-web backend for Nexpo template"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT and Auth
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Environment and Config
dotenv = "0.15"
config = "0.14"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI/Swagger
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2.9"
mockito = "1.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
