[package]
name = "nexpo-mobile"
version = "1.0.0"
description = "Nexpo Mobile Application - Cross-platform mobile app built with Tauri and Svelte"
authors = ["Nexpo Team"]
license = "MIT"
repository = "https://github.com/nexpo/nexpo"
default-run = "nexpo-mobile"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [
  "macos-private-api",
  "mobile-api",
  "protocol-asset"
] }
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"

[[bin]]
name = "nexpo-mobile"
path = "src/main.rs"
